<resources>
    <string name="app_name">IDNPlab04</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="lost_password_question">¿Olvidaste tu contraseña?</string>
    <string name="create_account_text">Crear Cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil_description">Imagen de perfil</string>
</resources>